modified:   _layouts/default.html 	modified:   "_posts/2019-3-26-\345\210\251\347\224\250skyell\345\273\272\347\253\213\346\234\254\345\234\260\345\215\232\345\256\242.md"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+<script language="javascript" type="text/javascript" src="https://cdn.staticfile.org/jquery/1.7.2/jquery.min.js"></script>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,6 +12,35 @@
     {{ content }}
 
     {% include footer.html %}
+<script type = "text/javascript">
+var mouseSum = 0;
+jQuery(document).ready(function($) {
+    $("body").click(function(e) {
+        var a = new Array("气气","呼呼");
+        var $i = $("<span/>").text(a[mouseSum]);
+        mouseSum = (mouseSum + 1) % a.length;
+        var x = e.pageX,
+        y = e.pageY;
+        $i.css({
+            "z-index": 9999999,
+            "top": y - 20,
+            "left": x,
+            "position": "absolute",
+            "font-weight": "bold",
+            "color": "#6651ff"
+        });
+        $("body").append($i);
+        $i.animate({
+            "top": y - 180,
+            "opacity": 0
+        },
+        1500,
+        function() {
+            $i.remove();
+        });
+    });
+});
+</script>
 
 
 <!-- Image to hack wechat -->
